live wait hanlder

--- a/h5player.html
+++ b/h5player.html
@@ -64,7 +64,7 @@
                 <p class="controlbar-tip controlbar-tip-long">窗口全屏</p>
             </div>
             <div class="controlbar-right h5player-pagescreen">
-                <p class="controlbar-tip controlbar-tip-long">网页全屏</p>
+                <p class="controlbar-tip controlbar-tip-long">剧场模式</p>
             </div>
             <div class="controlbar-right h5player-definition">
                 <p class="definition-text definition-sd"></p>
@@ -179,7 +179,7 @@
     $('.html5-btn').click(function(){
         if(!h5player){
              h5player = new H5player({
-                roomId: 2002590,
+                roomId: 1201116,
                 host: '',
                 videoId: 'video',
                 userUid: 1001
