--- a/h5player.html
+++ b/h5player.html
@@ -34,7 +34,7 @@
         	<div class="system-message" id="system-message">
         		<div class="left-bar"></div>
                 <div class="middle-bar">
-                    <p class="message-content">系统喇叭啦啦啦啦啦阿拉</p>
+                    <p class="message-content"></p>
                 </div>
                 <div class="right-bar"></div>
                 <div class="clear"></div>
@@ -51,6 +51,52 @@
                 </div>
                 <canvas class="right-bar" id="right-bar" width='50' height='28'></canvas>
                 <div class="clear"></div>
+            </div>
+            <div class="live-over">
+                <div class="live-over-tip">
+                    <img src="./imgs/h5player/over/live_over_icon@2x.png" alt="" class="live-over-icon">
+                    <div class="live-over-text">
+                        <p class="live-over-title">直播已结束</p>
+                        <p class="live-over-detail">xxx的直播已结束，喜欢就点击关注吧！</p>
+                    </div>
+                </div>
+                <div class="live-over-recommend">
+                    <a class="recommend-item recommend-item-video" href="">
+                         <img src="https://kascdn.kascend.com/jellyfish/game/video/screenshot/907644079/1540840850261_crop.jpg" alt="" class="live-over-rec-img">
+                        <div class="rec-info-box">
+                            <p class="rec-info-title ellipsis">卡尔讲堂开讲啦</p>
+                            <div class="rec-info-content">
+                                <i class="live-over-video-gift"></i>
+                                <span>3.8万</span>
+                                <i class="live-over-video-play"></i>
+                                <span>3.8万</span>
+                                <i class="live-over-video-comments"></i>
+                                <span>3.8万</span>
+                            </div>
+                        </div>
+                        <img src="./imgs/h5player/over/angle_icon_video.png" alt="" class="rec-angle-icon angle-icon-video">
+                    </a>
+                    <a class="recommend-item recommend-item-live" href="">
+                         <img src="https://kascdn.kascend.com/jellyfish/game/video/screenshot/907644079/1540840850261_crop.jpg" alt="" class="live-over-rec-img">
+                        <div class="rec-info-box">
+                            <p class="rec-info-title ellipsis">卡尔讲堂开讲啦</p>
+                            <div class="rec-info-content">
+                               <p class="rec-info-live ellipsis">
+                                   <i class="live-over-gender-male"></i>
+                                    <span class="rec-anchor-name ellipsis">主播名称主播名称</span>
+                                   <i class="live-over-room-hot"></i>
+                                    <span>883.8万</span>
+                               </p>
+                               <p class="rec-info-livearea ellipsis">全民突击</p>
+                            </div>
+                        </div>
+                        <img src="./imgs/h5player/over/angle_icon_live.png" alt="" class="rec-angle-icon angle-icon-live">
+                    </a>
+                </div>
+                <a class="back-to-home" href="">
+                    <i class="live-over-backto-home"></i>
+                    <span>返回首页</span>
+                </a>
             </div>
         </div>
         <div class="live-h5player-controlbar controlbar-bottom">
@@ -130,6 +176,10 @@
         </div>
     </div>
     <style>
+    body{
+        padding: 0;
+        margin:0;
+    }
     .test-btn {
         padding:5px 10px; 
         line-height: 40px;
@@ -179,7 +229,7 @@
     $('.html5-btn').click(function(){
         if(!h5player){
              h5player = new H5player({
-                roomId: 1201116,
+                roomId: 20185,
                 host: '',
                 videoId: 'video',
                 userUid: 1001
