--- a/h5player.html
+++ b/h5player.html
@@ -22,7 +22,7 @@
             <!-- 不支持自动播放 -->
             <div class="h5player-unsupport-autoplay">
                 <div class="unsupport-autoplay-box">
-                    <img src="./imgs/h5player/slogan.png" alt="" class="unsupport-autoplay-icon"> 
+                    <img src="./imgs/h5player/no_autoplay.png" alt="" class="unsupport-autoplay-icon"> 
                     <p class="unsupport-autoplay-tip">您的浏览器暂不支持视频自动播放</p>
                     <div class="unsupport-autoplay-btn">点击播放</div>
                 </div>
