--- a/h5player.html
+++ b/h5player.html
@@ -250,10 +250,9 @@
                 roomId: 20185,
                 host: '',
                 videoId: 'video',
-                userUid: 1001
+                userUid: 1001//当前用户的uid
             });
         }else{
-            console.log('back')
              h5player.switchBack();
         }
 
