--- a/h5player.html
+++ b/h5player.html
@@ -250,8 +250,12 @@
                 roomId: 20185,
                 host: '',
                 videoId: 'video',
+                anchorName:'xxx',
                 userUid: 1001//当前用户的uid
             });
+             h5player.init(function(){
+                
+             })
         }else{
              h5player.switchBack();
         }
