--- a/h5player.html
+++ b/h5player.html
@@ -33,41 +33,10 @@
                     <img src="./imgs/h5player/over/live_over_icon@2x.png" alt="" class="live-over-icon">
                     <div class="live-over-text">
                         <p class="live-over-title">直播已结束</p>
-                        <p class="live-over-detail">xxx的直播已结束，喜欢就点击关注吧！</p>
+                        <p class="live-over-detail">直播已结束，喜欢就点击关注吧！</p>
                     </div>
                 </div>
                 <div class="live-over-recommend">
-                    <a class="recommend-item recommend-item-video" href="">
-                         <img src="https://kascdn.kascend.com/jellyfish/game/video/screenshot/907644079/1540840850261_crop.jpg" alt="" class="live-over-rec-img">
-                        <div class="rec-info-box">
-                            <p class="rec-info-title ellipsis">卡尔讲堂开讲啦</p>
-                            <div class="rec-info-content">
-                                <i class="live-over-video-gift"></i>
-                                <span>3.8万</span>
-                                <i class="live-over-video-play"></i>
-                                <span>3.8万</span>
-                                <i class="live-over-video-comments"></i>
-                                <span>3.8万</span>
-                            </div>
-                        </div>
-                        <img src="./imgs/h5player/over/angle_icon_video.png" alt="" class="rec-angle-icon angle-icon-video">
-                    </a>
-                    <a class="recommend-item recommend-item-live" href="">
-                         <img src="https://kascdn.kascend.com/jellyfish/game/video/screenshot/907644079/1540840850261_crop.jpg" alt="" class="live-over-rec-img">
-                        <div class="rec-info-box">
-                            <p class="rec-info-title ellipsis">卡尔讲堂开讲啦</p>
-                            <div class="rec-info-content">
-                               <p class="rec-info-live ellipsis">
-                                   <i class="live-over-gender-male"></i>
-                                    <span class="rec-anchor-name ellipsis">主播名称主播名称</span>
-                                   <i class="live-over-room-hot"></i>
-                                    <span>883.8万</span>
-                               </p>
-                               <p class="rec-info-livearea ellipsis">全民突击</p>
-                            </div>
-                        </div>
-                        <img src="./imgs/h5player/over/angle_icon_live.png" alt="" class="rec-angle-icon angle-icon-live">
-                    </a>
                 </div>
                 <a class="back-to-home" href="">
                     <i class="live-over-backto-home"></i>
@@ -251,7 +220,7 @@
     $('.html5-btn').click(function(){
         if(!h5player){
              h5player = new H5player({
-                roomId: 20185,
+                roomId: 39849,
                 host: '',
                 videoId: '',
                 anchorName:'xxx',
