--- a/h5player.html
+++ b/h5player.html
@@ -4,10 +4,10 @@
 <head>
     <title>h5 video test page</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="./css/h5player.css">
+    <link rel="stylesheet" type="text/css" href="http://127.0.0.1:9090/css/roomdetail.css">
 </head>
 
-<body style="padding-top: 1000px">
+<body style="">
     <div class="live-h5player-container" id="live-h5player-container">
     	<div class="live-h5player-status">
             <!-- 直播开场 -->
@@ -220,7 +220,7 @@
     $('.html5-btn').click(function(){
         if(!h5player){
              h5player = new H5player({
-                roomId: 48722153,
+                roomId: 39849,
                 host: '',
                 videoId: '',
                 anchorName:'xxx',
